# gymtracker

./: .gitignore  AddDialog.qml  CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp  workoutmodel.cpp  workoutmodel.h
android/: AndroidManifest.xml
